[tool.poetry]
name = "fun-telegram-bot"
version = "0.1.0"
description = "Telegram bot just for sake of fun"
authors = ["Andriy Sydorenko <sidorenkoandrij217@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "3.6.0"
alembic = "1.13.1"
SQLAlchemy = "2.0.30"
pytz = "2024.1"
pillow = "^10.4.0"
flake8 = "^7.1.0"
isort = "^5.13.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.py$'
exclude = '''
(
  /(
      \.git
    | \.env
    | \.ini
    | alembic
    | \.venv
    | \.db
    | \.idea
    | \.log
  )/
  | \.pyi?$
)
'''

[tool.isort]
profile = "black"
